cmake_minimum_required(VERSION 2.6)
PROJECT (Study_VTK_Together03)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)

ADD_EXECUTABLE(Study_VTK_Together03 Study_VTK_Together03.cxx)
TARGET_LINK_LIBRARIES(Study_VTK_Together03 vtkRendering vtkIO)