cmake_minimum_required(VERSION 2.6)
PROJECT (vtkImageScale)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)

ADD_EXECUTABLE(vtkImageScale vtkImageScale.cxx)
TARGET_LINK_LIBRARIES(vtkImageScale vtkRendering vtkIO)